fix notification controller